# ai_term

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h  wrapper.cpp  wrapper.h
